Added an introduction

--- a/standard/7. ODI Stimulus Fund/7.1 site.md
+++ b/standard/7. ODI Stimulus Fund/7.1 site.md
@@ -1,3 +1,10 @@
+7.1 Household Waste Recycling Sites
+=
+In KnoWaste, a household waste recycling site is:
+
+>is a facility where the public can dispose of household waste and also often containing recycling points. [They] are run by the local authority in a given area. Collection points for recyclable waste such as green waste, metals, glass and other waste types are available
+
+from [Wikipedia](https://en.wikipedia.org/wiki/Civic_amenity_site)
 | Field Name                       | Description                                                                                                                                                                                                                                                                                                                  | Example                                                                                                                                                                                                  |
 |----------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | uri                              | Uri to identify the data source. Use this field when the id is part of an online register. This is the preferred way to link to a register that supports uri. For example: this uri (https://local-authority-eng.register.gov.uk/) links to the Gov.UK register for Local authorities in England.                            | https://environment.data.gov.uk/public-register/view/index                                                                                                                                               |
